# Face-identification-project

./: .gitignore  README.md  build_and_test.sh  descriptors.txt
dataset/: README.md
dataset/test/annotations/: person_01_v1.txt  person_01_v2.txt  person_02_v1.txt  person_02_v2.txt  person_03_v1.txt  person_03_v2.txt  person_04_v1.txt  person_04_v2.txt  person_05_v1.txt  person_05_v2.txt  person_06_v1.txt  person_06_v2.txt  person_07_v1.txt  person_07_v2.txt  person_08_v1.txt  person_08_v2.txt  person_09_v1.txt  person_09_v2.txt  person_10_v1.txt  person_10_v2.txt
dataset/unknown_videos/annotations/: unknown_01.txt  unknown_02.txt  unknown_03.txt  unknown_04.txt  unknown_05.txt  unknown_06.txt  unknown_07.txt  unknown_08.txt  unknown_09.txt  unknown_10.txt
src/: CMakeLists.txt  face_common.hpp  main.cpp  metrics.cpp  recognition.cpp
